--- a/plantilla/general/annexes.tex
+++ b/plantilla/general/annexes.tex
@@ -1,7 +1,9 @@
 %----------------------------------------------------------------------------------------
 %	Anexos
 %----------------------------------------------------------------------------------------
-\appendix
-\renewcommand{\appendixname}{Anexo}%
+
+\newpage
+%\appendix
+\renewcommand{\appendixname}{Anexos}%
 \chapter*{\appendixname}
-\phantomsection
+%\phantomsection
