--- a/plantilla/general/conclusions.tex
+++ b/plantilla/general/conclusions.tex
@@ -2,19 +2,14 @@
 %	Agradecimientos
 %----------------------------------------------------------------------------------------
 
-\newpage
-\clearpage{\pagestyle{empty}\cleardoublepage}
+\pagestyle{myportland}
 \doublespacing
-%% NUEVO CAPITULO X
-\chapter{Marco problemático}
-\newpage
-\pagestyle{after-table-of-content}
+%\pagenumbering{arabic}
 \chapter*{\centering \large Conclusiones}
-\addcontentsline{toc}{chapter}{Agradecimientos}
-\markboth{Agradecimientos}{Agradecimientos}
+\addcontentsline{toc}{chapter}{Conclusiones}
+\markboth{Conclusiones}{Conclusiones}
+\thispagestyle{myportland}
 
-%\justify
-%{Escribir agradecimientos aquí}\\[0.5cm]
+Escribe aquí tus conclusiones. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae fermentum augue, fringilla tincidunt sapien. Pellentesque molestie luctus quam eget faucibus. Suspendisse at tincidunt dolor. Nunc at velit non est pretium facilisis. Proin maximus tortor sed dapibus dapibus. Sed quis sapien accumsan, suscipit elit ut, pellentesque lorem. Fusce massa turpis, cursus at venenatis a, laoreet molestie neque. Suspendisse elementum, massa sed placerat fringilla, lorem leo congue mauris, quis convallis ante lectus eget magna. In et erat venenatis, luctus lacus sed, suscipit est.
 
-Escribe aquí tus conclusiones.
-
+Aliquam in facilisis mi, in volutpat nisl. Vestibulum sed arcu imperdiet, iaculis dolor ut, efficitur velit. Quisque at maximus lacus. In posuere viverra odio. Nulla est libero, finibus nec fermentum id, facilisis at libero. Pellentesque maximus eget ligula vitae tincidunt. In commodo dui vitae justo dictum luctus. Etiam tincidunt lectus nec mauris bibendum blandit. Curabitur eu hendrerit massa, vitae condimentum ex. In non enim odio. Quisque ut consectetur nibh, eu bibendum nisi. Pellentesque non augue vitae ipsum egestas placerat. Mauris eget tempor risus. Aliquam vitae dolor sit amet tellus semper ultrices. In efficitur dolor rutrum ligula aliquet, eu consequat augue consectetur.\cite{2005}
