--- a/plantilla/general/gratitude.tex
+++ b/plantilla/general/gratitude.tex
@@ -4,9 +4,11 @@
 
 \newpage
 \clearpage{\pagestyle{empty}\cleardoublepage}
-\pagestyle{after-table-of-content}
+%\doublespacing
+\newpage
+
 \chapter*{\centering \large Agradecimientos}
 \addcontentsline{toc}{chapter}{Agradecimientos}
 \markboth{Agradecimientos}{Agradecimientos}
 
-\justify{Escribir agradecimientos aquí}\\[0.5cm]
+Escribir agradecimientos aquí. Malesuada pellentesque elit eget gravida cum. Tincidunt eget nullam non nisi est sit amet facilisis magna. Aenean pharetra magna ac placerat vestibulum lectus mauris ultrices eros. 
