--- a/plantilla/general/introduction.tex
+++ b/plantilla/general/introduction.tex
@@ -1,13 +1,19 @@
 %----------------------------------------------------------------------------------------
-%	Resumen
+%	Introducción
 %----------------------------------------------------------------------------------------
 
 \newpage
 \clearpage{\pagestyle{empty}\cleardoublepage}
-\pagestyle{after-table-of-content}
-\pagenumbering{roman}
+%\doublespacing
+\newpage
+
 \chapter*{\centering \large Introducción} 
 \addcontentsline{toc}{chapter}{Introducción} % si queremos que aparezca en el índice
 \markboth{Introduction}{Introducción} % encabezado
 
-Escribe aquí tu introducción, puedes citar así \cite{MinisteriodelaProducciondelPeru2018}.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor risus ut sodales commodo. Phasellus volutpat, turpis vel vehicula imperdiet, massa ante commodo libero, quis ultricies velit mauris et metus. Nullam feugiat rhoncus tortor. Quisque sit amet interdum dui, ut sodales metus. Sed lacinia arcu nec lectus lacinia, interdum condimentum lectus pulvinar. Sed vestibulum blandit urna. Suspendisse ac tortor scelerisque, sagittis est fringilla, tincidunt magna. Sed euismod bibendum lorem, nec fermentum turpis tristique in. Curabitur maximus aliquet magna. Quisque faucibus orci lorem, ut vehicula ex lobortis in. Proin non urna vel urna aliquet accumsan. Donec eget quam at tellus pellentesque vehicula sit amet eget mauris. Ut sollicitudin consectetur efficitur. Fusce eleifend euismod nisl, vitae vestibulum augue luctus a. Sed porttitor ex ac arcu aliquet, quis tincidunt lectus varius. Pellentesque eu hendrerit mi.
+
+Nunc vehicula sed velit et tempus. Morbi aliquet ex orci, vel tristique lorem consequat aliquet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc iaculis ultricies justo, eu pretium nulla molestie eget. Nullam condimentum pharetra velit. Cras et ligula purus. Curabitur eleifend laoreet aliquam.
+
+Maecenas id orci mauris. Nulla a erat pellentesque, venenatis nunc sed, tristique ligula. Sed ullamcorper venenatis libero vitae interdum. Proin placerat eros eget porttitor lobortis. Curabitur sapien nisl, placerat vitae vulputate at, ornare vel mi. In consequat nibh metus, quis pellentesque lorem pharetra sit amet. Suspendisse dapibus, urna at eleifend porta, urna erat condimentum neque, sed sagittis lectus leo nec nunc. Praesent tempor metus quis leo vestibulum gravida. Donec faucibus.
+
