--- a/plantilla/general/table-of-content.tex
+++ b/plantilla/general/table-of-content.tex
@@ -1,11 +1,13 @@
+%----------------------------------------------------------------------------------------
+%	Tabla de contenidos
+%----------------------------------------------------------------------------------------
 
-%\newpage
 %\newpage
 %\clearpage{\pagestyle{empty}\cleardoublepage}
 %\doublespacing
 %\newpage
-%\pagestyle{after-table-of-content}
-\newpage
+
+
 \addcontentsline{toc}{chapter}{\contentsname}
 \tableofcontents 
 \newpage
@@ -14,7 +16,4 @@
 \newpage
 \addcontentsline{toc}{chapter}{\listtablename}
 \listoftables 
-\newpage
-
-\makegloss
 \newpage
