--- a/plantilla/main.tex
+++ b/plantilla/main.tex
@@ -2,15 +2,19 @@
 \include{general/config} % Set page configurations
 
 \begin{document}
-	\include{general/cover} 
+	\include{general/cover-tesis-pucp} % Carátula para Tesis
+	%\include{general/cover-trabajo-investigacion-pucp}% Carátula para Trabajos de investigación
 	\include{general/summary} % Starts roman counter
-	\include{general/introduction}
-	\include{general/gratitude}
+	\include{general/introduction} 
+	\include{general/gratitude} % Agradecimientos (opcional)
 	\include{general/table-of-content} % Starts arabic counter
+	\include{general/before-chapters} % Configuración de páginas
 	\include{chapters/chapter1}
 	\include{chapters/chapter2}
 	\include{chapters/chapter3}
+	\include{chapters/chapter4}
 	\include{general/conclusions}
 	\include{general/bibliography}
+	\include{general/after-chapters} % Configuración de páginas
 	\include{general/annexes}
 \end{document} 
